Exercise 1.06: Project v.04/manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  namespace: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: astranero/todo:v.08
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
